--- a/glossary.tex
+++ b/glossary.tex
@@ -26,7 +26,7 @@
 \newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
 %
 % Transversalebene
-\newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des Mesnchlichen Körpers. \cite{lit:transversal}}}
+\newglossaryentry{g:transversalebene}{name=Transversalebene, description={Ebene in der Medizin. Erstreckt sich von links nach rechts und von vorne nach hinten. Sie steht senkrecht auf der Längsachse des menschlichen Körpers. \cite{lit:transversal}}}
 %
 % LabVIEW
 \newglossaryentry{g:labview}{name=LabVIEW, description={System Design Software von der Firma \acrfull{ac:ni}}}
