--- a/theorems.tex
+++ b/theorems.tex
@@ -14,3 +14,4 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Definitionen
 \newtheorem{definition}{Definition}
+\newtheorem{hypo}{Hypothese}
