add some corrections

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -29,6 +29,7 @@
 \newacronym{ac:tp}{TP}{Tiefpass}
 \newacronym{ac:cnc}{CNC}{Computerized Numerical Control}
 \newacronym{ac:lms}{LMS}{Least Mean Square}
+\newacronym{ac:sftp}{SFTP}{Secure File Transfer Protocol}
 
 
 
