--- a/bibliography.bib
+++ b/bibliography.bib
@@ -240,3 +240,12 @@
   year = {2014},
   keywords = {lit},
 }
+
+@ONLINE{lit:knie,
+  url = {http://emedicine.medscape.com/article/89442-overview},
+  title = {Anterior Cruciate Ligament Injury },
+  author = {Matthew Gammons},
+  urldate = {2014-06-19},
+  year = {2014},
+  keywords = {lit},
+}
